# sql_llm

./: .bandit.yml  .env  README.md  docker-compose.yml  pyproject.toml
.docker/pg/: Dockerfile  init.sql
src/: cli.py  settings.py
src/commands/: movie.py
src/lib/: models.py
src/lib/chains/movie/: __init__.py  chain.py  prompts.py
src/lib/llm/: groq.py
